# cdm-schema

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  config.public.mk  index.html  linkml_to_pyspark.py  mkdocs.yml  pyproject.toml  schema_sanity_check.py  sitemap.xml
.github/: dependabot.yaml  trivy.yaml
AbsoluteCoordinate/: index.html
AggregationAttribute/: index.html
AggregationDurationEnum/: index.html
AllProblems/: index.html
AltitudeCoordinate/: index.html
AltitudeCoordinateEnum/: index.html
AnnotationPropertyNode/: index.html
AnonymousClassExpression/: index.html
AnonymousExpression/: index.html
AnonymousIndividualExpression/: index.html
AnonymousPropertyExpression/: index.html
Any/: index.html
Assembly/: index.html
Association/: index.html
AssociationChange/: index.html
AssociationXEntity/: index.html
AssociationXPublication/: index.html
AssociationXSupportingObject/: index.html
AsymmetricPropertyNode/: index.html
AttributeMapping/: index.html
AttributeMixin/: index.html
AttributeValue/: index.html
AttributeValueEntity/: index.html
AttributeValueType/: index.html
AxiomDbxrefAnnotation/: index.html
Base/: index.html
BaseTable/: index.html
BlankNode/: index.html
Boolean/: index.html
CdmAssociationId/: index.html
CdmClusterId/: index.html
CdmContigCollectionId/: index.html
CdmContigId/: index.html
CdmContributorId/: index.html
CdmDataSourceId/: index.html
CdmEncodedFeatureId/: index.html
CdmFeatureId/: index.html
CdmId/: index.html
CdmLicenseId/: index.html
CdmProteinId/: index.html
CdmProtocolId/: index.html
CdmSampleId/: index.html
CdmSequenceId/: index.html
CdsPhaseType/: index.html
ClassNode/: index.html
ClassTrait/: index.html
Cluster/: index.html
ClusterMember/: index.html
ClusterType/: index.html
ClusterXProtein/: index.html
Contig/: index.html
ContigCollection/: index.html
ContigCollectionType/: index.html
ContigCollectionXEncodedFeature/: index.html
ContigCollectionXFeature/: index.html
ContigCollectionXProtein/: index.html
ContigXContigCollection/: index.html
ContigXContigset/: index.html
ContigXEncodedFeature/: index.html
ContigXFeature/: index.html
ContigXProtein/: index.html
Contigset/: index.html
ContigsetType/: index.html
Contributor/: index.html
ContributorAffiliation/: index.html
ContributorAffiliations/: index.html
ContributorRole/: index.html
ContributorToDataSource/: index.html
ContributorType/: index.html
ContributorXDataSource/: index.html
ContributorXExperiment/: index.html
ContributorXOrganization/: index.html
ContributorXProject/: index.html
ContributorXRoleXExperiment/: index.html
ContributorXRoleXProject/: index.html
ControlledIdentifiedTermValue/: index.html
ControlledTermValue/: index.html
ControlledVocabularyTermValue/: index.html
Coordinate/: index.html
CountOfInstantiatedClasses/: index.html
CountOfPredicates/: index.html
CountOfSubclasses/: index.html
Creator/: index.html
Curie/: index.html
DataSource/: index.html
DataSourceDescription/: index.html
DataSourceFundingReference/: index.html
DataSourceLicense/: index.html
DataSourceNew/: index.html
(+752 files in other folders)
